RESOLVED FIXED129024
Changing selection shouldn't synchronously update editor UI components
https://bugs.webkit.org/show_bug.cgi?id=129024
Summary Changing selection shouldn't synchronously update editor UI components
Ryosuke Niwa
Reported 2014-02-18 20:57:46 PST
Right now, editor UI controller such as spellchecker, alternative text controller, and delete button controller are all updated synchronously upon selection change. We shouldn't do that at least for programatic selection changes.
Attachments
Fixes the bug (27.73 KB, patch)
2014-02-18 21:50 PST, Ryosuke Niwa
no flags
Fixes Windows build (30.71 KB, patch)
2014-02-18 22:37 PST, Ryosuke Niwa
bfulgham: review+
Ryosuke Niwa
Comment 1 2014-02-18 21:50:56 PST
Created attachment 224592 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2014-02-18 22:37:00 PST
Created attachment 224595 [details] Fixes Windows build
Brent Fulgham
Comment 3 2014-02-19 11:18:09 PST
Comment on attachment 224595 [details] Fixes Windows build View in context: https://bugs.webkit.org/attachment.cgi?id=224595&action=review A couple of minor nits to consider, but r=me. > Source/WebCore/testing/Internals.cpp:1318 > + // FIXME: We shouldn't pollute the id namespace with this name. Should we file a bug to track this FIXME? > LayoutTests/platform/mac/editing/deleting/id-in-deletebutton.html:14 > + shouldBeNonNull('internals.findEditingDeleteButton(); document.getElementById("WebKit-Editing-Delete-Button")'); I don't feel like this is clearer than the original code.
Ryosuke Niwa
Comment 4 2014-02-19 16:10:01 PST
Ryosuke Niwa
Comment 5 2014-02-19 16:12:12 PST
(In reply to comment #3) > (From update of attachment 224595 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=224595&action=review > > A couple of minor nits to consider, but r=me. > > > Source/WebCore/testing/Internals.cpp:1318 > > + // FIXME: We shouldn't pollute the id namespace with this name. > > Should we file a bug to track this FIXME? Filed https://bugs.webkit.org/show_bug.cgi?id=129072. > > > LayoutTests/platform/mac/editing/deleting/id-in-deletebutton.html:14 > > + shouldBeNonNull('internals.findEditingDeleteButton(); document.getElementById("WebKit-Editing-Delete-Button")'); > > I don't feel like this is clearer than the original code. This is to make expected result more self explanatory. The old expected result didn't tell us how we were finding the delete button controller at all.
Ryosuke Niwa
Comment 6 2014-02-19 17:12:03 PST
Removed a bogus assertion in http://trac.webkit.org/changeset/164404.
Ryosuke Niwa
Comment 7 2014-02-21 00:10:20 PST
Note You need to log in before you can comment on or make changes to this bug.